fix: indexed user in rebac
